# docx-parser

./: .gitignore  README.md  pyproject.toml
docs/: TEST_PLAN.md
docs/plans/: 2026-01-25-heading-hierarchy.md  2026-01-26-docx-parser-refactoring.md
docs/plans/2026-01/: 2026-01-25_12pm_plan.md
docs/plans/reviews/: 2026-01-25_12pm_review.md
docs/sessions/2026-01/: 2026-01-25_handover.xml
docs/sessions/works/: ax-vlm-docx-parser-fix.xml  docx-hierarchy-feature.xml  remove-unused-providers.xml  table-format-feature.xml  vision-bytes-support.xml
docx_parser/: __init__.py  config.py  exceptions.py  langchain_loader.py  parser.py  validators.py
docx_parser/formatters/: __init__.py  base.py  html.py  json_formatter.py  markdown.py  text.py
docx_parser/models/: __init__.py  blocks.py  enums.py  image.py  metadata.py  result.py  table.py
docx_parser/processors/: __init__.py  base.py  content.py  image.py  metadata.py  numbering.py  style.py  table.py
docx_parser/strategies/: __init__.py  auto.py  base.py  font_size.py  pattern.py  style.py
docx_parser/summarizer/: __init__.py  base.py  cerebras.py  claude.py  gemini.py  openai.py
docx_parser/utils/: __init__.py  image.py  xml.py
docx_parser/vision/: __init__.py  anthropic.py  base.py  encoder.py  exceptions.py  google.py  openai.py  retry.py  transformers.py  utils.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: generator.py
tests/integration/: test_langchain_loader.py  test_parser.py
tests/unit/: test_config.py  test_corrupted_files.py  test_exceptions.py  test_validators.py
tests/unit/formatters/: test_formatters.py
tests/unit/models/: test_blocks.py  test_enums.py  test_image.py  test_metadata.py  test_result.py  test_table.py
tests/unit/processors/: test_processors.py
tests/unit/strategies/: test_strategies.py
tests/unit/utils/: test_image.py  test_xml.py
tests/unit/vision/: test_vision.py
