[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx-parser"
version = "0.4.0"
description = "DOCX parser with image extraction, metadata, vision, and LangChain integration"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["docx", "parser", "langchain", "markdown", "document", "vision", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "pillow>=9.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "llama-index>=0.10.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
llama-index = ["llama-index>=0.10.0"]
# API providers
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
google = ["google-generativeai>=0.4.0"]
# Local providers
transformers = ["transformers>=4.35.0", "torch>=2.0.0", "pillow>=9.0.0", "accelerate>=0.20.0"]
# Bundles
vision-api = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
]
vision-local = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "pillow>=9.0.0",
    "accelerate>=0.20.0",
]
vision = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
]
all = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "llama-index>=0.10.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "python-docx>=0.8.11",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/docx-parser"
Repository = "https://github.com/yourusername/docx-parser"

[tool.hatch.build.targets.wheel]
packages = ["docx_parser"]

# =============================================================================
# Testing Configuration
# =============================================================================

[tool.pytest.ini_options]
addopts = "--cov=docx_parser --cov-branch --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_api: tests that require external API access",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["docx_parser"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# =============================================================================
# Code Quality Tools
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
